# crimson-desert-support-desk

./: .env.example  .gitignore  README.md  crimson_desert_support_desk_codex_5_4_xhigh_plan.md  fetch_official_notices.bat  gpt_pro_handoff_real_service_and_monetization.md  real_prototype_service_plan.md  render.yaml  run_backend.bat  run_frontend.bat  run_support_desk.bat  support_desk_asgi.py  sync_official_notices.bat
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: admin.py  doctor.py  faq.py  health.py  issues.py  patches.py  search.py
backend/app/services/: catalog.py  diff.py  doctor.py  importer.py  official_notice_fetcher.py  search.py  seed.py
backend/tests/: conftest.py  test_api.py  test_deploy_config.py  test_importer.py  test_official_notice_fetcher.py
data/seeds/: sample_data.json
docs/history/: 2026-03-31_progress_log.md
docs/launch/: 01_status.md  02_strategy.md  03_web_research_brief.md  04_vercel_render_setup.md  README.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/scripts/: generate-seo.mjs
frontend/src/: index.css  main.tsx
frontend/src/app/: App.tsx
raw_sources/: README.md
raw_sources/incoming/: README.md
raw_sources/templates/: faq_template.md  known_issue_template.md  patch_note_template.md
scripts/: fetch_official_notices.py  import_official_source.py  run_backend_server.py  seed_local.py
(+100 files in other folders)
